<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.MainActivity">
    <ScrollView
            android:id="@+id/main_layout"
            android:background="@drawable/gradient_animation_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <EditText
                android:layout_marginBottom="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:id="@+id/city_name_text"
                android:hint="@string/city_name_hint" android:textAlignment="center"
                android:gravity="center"/>
        <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/loader"
                android:visibility="gone"/>
        <Button
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/search_button_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/search_button" android:background="@color/colorAccent"
                android:gravity="center" android:layout_gravity="center"/>
        <TextView
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/history_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView" android:layout_gravity="center" android:textSize="18sp"/>

        <LinearLayout
                android:id="@+id/history_layout"
                android:layout_width="match_parent" android:layout_height="wrap_content"
                android:orientation="vertical"/>
    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>